# mpris_scrobblingd

./: CHANGELOG.md  LICENSE  README.md  db_init_script.sql  mpris-scrobbling-daemon.cabal
app/: Config.hs  DBQueries.hs  JsonOperations.hs  MPRIS.hs  Main.hs  Misc.hs  ScrobbleTypes.hs  Stats.hs
