cabal-version:      2.4
name:               mpris-scrobbling-daemon
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             MIKObscura
maintainer:         contact.mikobscura@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable mpris-scrobbling-daemon
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Config, DBQueries, JsonOperations, Stats, ScrobbleTypes, MPRIS, Misc
    ghc-options: -threaded

    -- LANGUAGE extensions used by modules in this package.
    extensions: OverloadedStrings, TemplateHaskell, OverloadedRecordDot, DuplicateRecordFields
    -- other-extensions:
    build-depends:    base, dbus, sqlite-simple, aeson, split, time, bytestring, aeson-pretty, containers, stm, strict, directory
    hs-source-dirs:   app
    default-language: Haskell2010
